# LMC_Creation_PO_et_Prix_FL

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: secrets.example.toml
lmc_po_price/: __init__.py  database.py  exports.py  invoice_parsing.py  matching.py  models.py  odoo_articles.py  odoo_price_update.py  odoo_purchase_order.py  pricing.py  purchase_order.py  supplier_rules.py  text.py  workflow.py
lmc_po_price/suppliers/: __init__.py  base.py  le_relais_local.py  pdf.py  relais_vert.py
scripts/: refresh_odoo_database.py
tests/: test_local_workflow.py  test_odoo_purchase_order.py  test_relais_vert.py
