[project]
name = "lmc-creation-po-et-prix-fl"
version = "0.1.0"
description = "Creation de bons de commande et revue prix Odoo a partir de factures fournisseur."
requires-python = ">=3.11"
dependencies = [
  "streamlit>=1.34",
  "pandas>=2.0",
  "pdfplumber>=0.11",
  "pypdf>=4.0",
  "PyMuPDF>=1.24",
  "openpyxl>=3.1",
  "odoorpc>=0.10",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

